test: Write tests for :data:prayer